--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,9 @@ services:
       - "9999:5173"
     depends_on:
       - hub
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
     networks:
       - app-network
 
@@ -16,6 +19,7 @@ services:
       - "9010:9010"
     volumes:
       - ./hub:/app
+      - /app/node_modules
     working_dir: /app
     command: npm run dev
     networks:
